added change responsible person page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -75,59 +75,91 @@
 
       <h2 class="govuk-heading-l"><abbr>SCNP</abbr>/Cosmetics designs</h2>
 
-      <h3 class="govuk-heading-m">Search &amp; Results</h3>
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            General (miscellaneous)
+          </span>
+        </summary>
+        <div class="govuk-details__text">
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>Cosmentics search results page
           <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01.html" target="_blank">#1132 Search page design</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01-error.html" target="_blank">#1132 Search page design with errors</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/form-behaviours.txt" target="_blank">#1132 notes about the form(s)</a></li>
+            <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
+            <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
+            <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
           </ul>
-        </li>
-      </ul>
+        </div>
+      </details>
 
-      <h3 class="govuk-heading-m">Nanomaterials</h3>
-      <p class="govuk-body-s">For these flat HTML files the nav active state is set to the nanomaterials page.</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01.html" target="_blank">Cosmetic products</a>
-          <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products (0 incomplete, 3 errors example)</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html" target="_blank">Cosmetic products (0 incomplete, 0 errors example).</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html" target="_blank">Cosmetic products (2 incomplete, 0 errors example).</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a> New list style
-          <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/nanomaterials-old.html" target="_blank">Nanomaterials - old</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products - success banner</a></li>
-      </ul>
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Search &amp; Results
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li>Cosmentics search results page...
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01.html" target="_blank">#1132 Search page design</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01-error.html" target="_blank">#1132 Search page design with errors</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/form-behaviours.txt" target="_blank">#1132 notes about the form(s)</a></li>
+                </ul>
+              </li>
+            </ul>
+        </div>
+      </details>
 
-      <h3 class="govuk-heading-s">Nanomaterials with account bar</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta.html" target="_blank">Nanomaterials - with account bar</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details-beta.html" target="_blank">Nanomaterial details - with account bar</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html" target="_blank">Nanomaterial - with account bar &amp; no beta banner</a></li>
-      </ul>
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Cosmetics / Nanomaterials / Responsible person, etc
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01.html" target="_blank">Cosmetic products</a>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products (0 incomplete, 3 errors example)</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html" target="_blank">Cosmetic products (0 incomplete, 0 errors example).</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html" target="_blank">Cosmetic products (2 incomplete, 0 errors example).</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
+                </ul>
+              </li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a> New list style
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/nanomaterials-old.html" target="_blank">Nanomaterials - old</a></li>
+                </ul>
+              </li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
+              <li>Change the Responsible Person (COSBETA-1236): <br><a href="/nanomaterials-1149/change-responsible-person.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Change the Responsible Person</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products - success banner</a></li>
+            </ul>
+        </div>
+      </details>
 
       <h3 class="govuk-heading-m">Cosmetic Product draft page</h3>
       <p class="govuk-body-s">A series of 3 user journeys stepping through the visual task based flow of the draft page - required for breaking the current 'add a product' service into smaller tasks: </p>
       <p class="govuk-body"><a href="/drafts-gui/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
 
-      <h3 class="govuk-heading-s">Responsible Person address form (COSBETA-1216)</h3>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
-        <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
-        <li><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
-      </ul>
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            <abbr>WIP</abbr>, ideas, demos, etc
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          <h3 class="govuk-heading-s">Nanomaterials with account bar</h3>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta.html" target="_blank">Nanomaterials - with account bar</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details-beta.html" target="_blank">Nanomaterial details - with account bar</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html" target="_blank">Nanomaterial - with account bar &amp; no beta banner</a></li>
+          </ul>
+        </div>
+      </details>
 
 
     </div>
