small title amend

--- a/app/views/nanomaterials-1149/change-responsible-person.html
+++ b/app/views/nanomaterials-1149/change-responsible-person.html
@@ -25,13 +25,13 @@
   classes: "govuk-!-padding-top-3 govuk-!-padding-bottom-1",
   fieldset: {
     legend: {
-      text: "Select a Responsible Person",
+      text: "Change the Responsible Person",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
     }
   },
   hint: {
-    text: "Replace xxxxxxxxxx as the Responsible Person."
+    text: "Select a Responsbile Person to replace xxxxxxxxxx as the Responsible Person."
   },
   items: [
     {
