--- a/app/views/nanomaterials-1149/change-responsible-person.html
+++ b/app/views/nanomaterials-1149/change-responsible-person.html
@@ -31,7 +31,7 @@
     }
   },
   hint: {
-    text: "Select a Responsbile Person to replace xxxxxxxxxx as the Responsible Person."
+    text: "Select a Responsbile Person to replace xxxxxxxxxx."
   },
   items: [
     {
