terms and conditions page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,6 +36,11 @@
 
       <h2 class="govuk-heading-l govuk-!-margin-top-9"><abbr>PSD</abbr> designs</h2>
 
+      <h3 class="govuk-heading-m">Terms and conditions - Declaration</h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/terms-and-conditions/example-1.html" target="_blank">example 1</a></li>
+      </ul>
+
       <h3 class="govuk-heading-m">Change the case owner</h3>
 
       <ul class="govuk-list govuk-list--bullet">
