changed layout page

--- a/app/views/terms-and-conditions/example-1.html
+++ b/app/views/terms-and-conditions/example-1.html
@@ -1,4 +1,4 @@
-{% extends "layout-02-noacc.html" %}
+{% extends "layout-01.html" %}
 
 {% block pageTitle %}
     Declaration - Product Safety Database - GOV.UK
