text changes to change a RP

--- a/app/views/nanomaterials-1149/change-responsible-person.html
+++ b/app/views/nanomaterials-1149/change-responsible-person.html
@@ -25,26 +25,26 @@
   classes: "govuk-!-padding-top-3 govuk-!-padding-bottom-1",
   fieldset: {
     legend: {
-      text: "Change the Responsible Person",
+      text: "Select the Responsible Person",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
     }
   },
   hint: {
-    text: "Select the Responsible Person to replace [name here]."
+    text: "Replace [Responsbile person 1] as the Responsible Person."
   },
   items: [
     {
       value: "option-01",
-      text: "A responsbile person"
+      text: "Responsbile person 2"
     },
     {
       value: "option-02",
-      text: "Different name"
+      text: "Responsbile person 3"
     },
     {
       value: "option-03",
-      text: "Someone else"
+      text: "Responsbile person 4"
     },
     {
       divider: "or"
