heroku but move js content

--- a/app/views/includes/scripts-testing.html
+++ b/app/views/includes/scripts-testing.html
@@ -12,4 +12,5 @@
 {% endif %}
 
 <!-- Javascript file for 'layout-user-testing.html' and product-case-testing -->
-<script src="/public/javascripts/product-case-testing.js"></script>
+<!-- commented out and moved js content to global header instead as heroku couldn't find the js file from this location? -->
+<!--script src="/public/javascripts/product-case-testing.js"></script-->
