--- a/app/views/cosmetics-search-designs/search-page-01-error.html
+++ b/app/views/cosmetics-search-designs/search-page-01-error.html
@@ -235,7 +235,7 @@
                    <span class="govuk-!-font-weight-bold">dye, hairspray</span>,<span id="opss-filter-txt" class="opss-filter-txt"> using the current filters,</span> were found.</p>
            </div>
            <div class="govuk-grid-column-one-third">
-               <div class="govuk-form-group opss-float-right">
+               <div class="govuk-form-group opss-text-align-right">
                    <form action="#" method="post">
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
