--- a/app/views/product-case-testing/products-page-results.html
+++ b/app/views/product-case-testing/products-page-results.html
@@ -385,7 +385,7 @@
                 </p>
                </div>
            <div class="govuk-grid-column-one-third">
-               <div class="govuk-form-group opss-float-right">
+               <div class="govuk-form-group opss-text-align-right">
                    <form id="sort-form" action="#" method="post">
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
