two pages and template

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -76,6 +76,29 @@
         </div>
       </details>
 
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            <abbr>GDS</abbr> page widths work:
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a href="/psd-page-widths/demo1" target="_blank">Demo 1</a></li>
+            <li><a href="/psd-page-widths/demo2" target="_blank">Demo 2</a></li>
+
+          </ul>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>On Header: replace .psd-header with .govuk-header</li>
+            <li>On Header > div, replace "psd-header__container govuk-width-container" with "govuk-header__container govuk-width-container"</li>
+            <li>In Header: replace .psd-header__logo with .govuk-header__logo</li>
+            <li>In Header: replace .psd-header__content with .govuk-header__content</li>
+            <li>add temp override CSS</li>
+          </ul>
+        </div>
+      </details>
+
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible" style="margin-bottom: 100px;">
 
       <h2 class="govuk-heading-l"><abbr>SCNP</abbr>/Cosmetics designs</h2>
