--- a/app/views/index.html
+++ b/app/views/index.html
@@ -84,16 +84,17 @@
         </summary>
         <div class="govuk-details__text">
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/psd-page-widths/demo1" target="_blank">Demo 1</a></li>
-            <li><a href="/psd-page-widths/demo2" target="_blank">Demo 2</a></li>
-
+            <li><a href="/psd-page-widths/demo1" target="_blank">Demo 1 cases</a></li>
+            <li><a href="/psd-page-widths/demo2" target="_blank">Demo 2 overview</a></li>
+            <li><a href="/psd-page-widths/demo3" target="_blank">Demo 3 products</a></li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">
-            <li>On Header: replace .psd-header with .govuk-header</li>
-            <li>On Header > div, replace "psd-header__container govuk-width-container" with "govuk-header__container govuk-width-container"</li>
-            <li>In Header: replace .psd-header__logo with .govuk-header__logo</li>
-            <li>In Header: replace .psd-header__content with .govuk-header__content</li>
-            <li>add temp override CSS</li>
+            <li>On Header: Replace .psd-header with .govuk-header</li>
+            <li>On Header > div: Replace "psd-header__container govuk-width-container" with "govuk-header__container govuk-width-container"</li>
+            <li>In Header: Replace .psd-header__logo with .govuk-header__logo</li>
+            <li>In Header: Replace .psd-header__content with .govuk-header__content</li>
+            <li>Add .govuk-width-container to .hmcts-identity-bar__container </li>
+            <li>Add temp override CSS</li>
           </ul>
         </div>
       </details>
