--- a/app/views/psd-page-widths/demo1.html
+++ b/app/views/psd-page-widths/demo1.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" id="hideGreyBar">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
         Cases
