extra demo pages and css

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -84,9 +84,13 @@
         </summary>
         <div class="govuk-details__text">
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/psd-page-widths/demo1" target="_blank">Demo 1 cases</a></li>
+            <li><a href="/psd-page-widths/demo1" target="_blank">Demo 1 cases list</a></li>
             <li><a href="/psd-page-widths/demo2" target="_blank">Demo 2 overview</a></li>
-            <li><a href="/psd-page-widths/demo3" target="_blank">Demo 3 products</a></li>
+            <li><a href="/psd-page-widths/demo3" target="_blank">Demo 3 products details</a></li>
+            <li><a href="/psd-page-widths/demo4" target="_blank">Demo 4 supporting info</a></li>
+            <li><a href="/psd-page-widths/demo5" target="_blank">Demo 5 products list</a></li>
+            <li><a href="/psd-page-widths/demo6" target="_blank">Demo 6 businesses list</a></li>
+            <li><a href="/psd-page-widths/demo7" target="_blank">Demo 7 product detail</a></li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">
             <li>On Header: Replace .psd-header with .govuk-header</li>
@@ -94,7 +98,7 @@
             <li>In Header: Replace .psd-header__logo with .govuk-header__logo</li>
             <li>In Header: Replace .psd-header__content with .govuk-header__content</li>
             <li>Add .govuk-width-container to .hmcts-identity-bar__container </li>
-            <li>Add temp override CSS</li>
+            <li>Add temporary override CSS to end of bespoke styles</li>
           </ul>
         </div>
       </details>
